common/backend-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-to-db
  namespace: my-app-namespace
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: In
        values: ["rabbitmq", "mongodb"]
  inress:
  - from:
    - podSelector:
      matchLabels:
        app: frontend
    ports:
        - port: 80
